--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ h1 {
     border: 5px solid blue;
 }
 
+.game-clock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
   
   
 
